--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-  <!--------------------- header ----------------------->
+  <!-- header -->
     <header>
       <h1>Adeline Latruwe</h1>
       <p>Sotfware Developer</p>
     </header>
-  <!--------------------- main content ----------------------->
+  <!--main content -->
     <main class="wrapper">
       <div>
-         <!--------------------- profile photo ----------------------->
+         <!-- profile photo -->
         <img class="profile-photo" src="images/adeline-pic.jpg" width="350" alt="profile photo">
-         <!--------------------- intro ----------------------->
+         <!-- intro -->
         <article>
           <h2>Hi! I'm Adeline</h2>
           <p>I am a software developer living in Los Angeles, California.</p>
         </article>
         <hr>
-         <!--------------------- about me section ----------------------->
+         <!-- about me section -->
         <article>
           <h2>About Me</h2>
           <div class="about-me">
@@ -42,11 +42,11 @@
               <li>an avid baker.</li>
               <li>an outdoors enthousiast.</li>
               <li>French!</li>
-            </ul
+            </ul>
           </div>  
         </article>
         <hr>
-         <!--------------------- contact me section ----------------------->
+         <!-- contact me section -->
         <article>
           <h2>Contact Me</h2>
           <div class="contact-me">
@@ -57,7 +57,7 @@
         </article>
       </div>
     </main>
-  <!--------------------- footer ----------------------->
+  <!-- footer -->
     <footer>
       <h3>&copy; Copyright 2020</h3>
     </footer>
