--- a/index.html
+++ b/index.html
@@ -9,23 +9,22 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-  <!-- header -->
+    <!-- header -->
     <header>
       <h1>Adeline Latruwe</h1>
       <p>Sotfware Developer</p>
     </header>
-  <!--main content -->
+    <!--main content -->
     <main class="wrapper">
-      <div>
-         <!-- profile photo -->
+        <!-- profile photo -->
         <img class="profile-photo" src="images/adeline-pic.jpg" width="350" alt="profile photo">
-         <!-- intro -->
+        <!-- intro -->
         <article>
           <h2>Hi! I'm Adeline</h2>
           <p>I am a software developer living in Los Angeles, California.</p>
         </article>
         <hr>
-         <!-- about me section -->
+        <!-- about me section -->
         <article>
           <h2>About Me</h2>
           <div class="about-me">
@@ -46,16 +45,15 @@
           </div>  
         </article>
         <hr>
-         <!-- contact me section -->
+        <!-- contact me section -->
         <article>
           <h2>Contact Me</h2>
           <div class="contact-me">
-            <a href="https://www.linkedin.com/in/adeline-latruwe-16804940/">LinkedIn</a>
-            <a href="https://github.com/alatruwe">Github</a>
+            <a href="https://www.linkedin.com/in/adeline-latruwe-16804940/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/alatruwe" target="_blank">Github</a>
             <a href="mailto:adeline.latruwe@gmail.com">E-mail</a>
           </div>  
         </article>
-      </div>
     </main>
   <!-- footer -->
     <footer>
